fix(observability): correlation-id hardening — input validation, CORS expose, constants extraction (Copilot review)
Addresses 4 Copilot inline findings on PR #37:

1. CORS missing X-Request-Id exposure (RequestIdFilter:23):
   - SecurityConfig.corsConfigurationSource now includes X-Request-Id in
     both setAllowedHeaders (clients can forward an inbound id) and
     setExposedHeaders (JS can read the echoed id from the response).

2. X-Request-Id input validation / log forging (RequestIdFilter:45):
   - Inbound header values are now matched against a strict allow-list
     (`^[A-Za-z0-9_-]{1,64}$`). Anything that does not match — CR/LF
     payloads, overlong values, whitespace, quotes — is replaced with a
     freshly generated UUID. Defends against HTTP response-splitting and
     SLF4J log forging.
   - 5 new unit tests cover CRLF injection, overlong values, disallowed
     characters, valid UUID passthrough, and short alphanumeric ids.

3. Double-registration bug (SecurityConfig:196 + @Component):
   - Spring Boot was auto-registering the @Component-annotated filter at
     the servlet container layer, while SecurityConfig also added it
     inside the security filter chain. Two passes meant the outer
     finally-block cleared the MDC before downstream filters could read
     it.
   - Kept the SecurityFilterChain registration (needed so MDC is set
     before JwtAuthenticationFilter logs flow through it), and added a
     FilterRegistrationBean<RequestIdFilter> with setEnabled(false) to
     suppress the auto-registration. The filter is now invoked exactly
     once per request.

4. BiometricProcessorClient coupling (BiometricProcessorClient:60):
   - Extracted HEADER_NAME and MDC_KEY into a new neutral
     infrastructure/web/CorrelationId class. The outbound adapter no
     longer imports the inbound filter; both sides depend on the
     constants holder. RequestIdFilter retains the old constants as
     @Deprecated forwarders so any downstream code keeps co